compiler/tests/success/subarrays/x86-64/subarray.jazz
export fn main (reg u64 i) -> reg u64 {
  stack u64[10] s;
  reg ptr u64[5] r;
  reg ptr u64[2] r1;
  reg ptr u64[2] r2;
  reg u64 res tmp;

  s[0] = 2;
  r = s[i:5];
  r1 = r[0:2];
  r1[0] = 2;
  res = r1[0];
  r = r[0:5];
  r2 = r[2:2];

  res += r2[0];
  return res;
}
